--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@ant-design/pro-layout": "6.16.3",
     "@umijs/preset-react": "1.x",
+    "ahooks": "^2.10.0",
     "antd": "4.15.1",
     "styled-components": "5.2.3",
+    "swiper": "6.5.7",
     "umi": "3.4.8"
   },
   "devDependencies": {
