--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
   "dependencies": {
     "@ant-design/pro-layout": "6.16.3",
     "@umijs/preset-react": "1.x",
-    "ahooks": "^2.10.0",
+    "ahooks": "2.10.1",
     "antd": "4.15.1",
+    "nprogress": "^0.2.0",
     "styled-components": "5.2.3",
     "swiper": "6.5.7",
     "umi": "3.4.8"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
     "@types/styled-components": "5.1.9",
