--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@umijs/preset-react": "1.x",
     "ahooks": "2.10.1",
     "antd": "4.15.1",
+    "dayjs": "^1.10.4",
     "nprogress": "^0.2.0",
+    "storejs": "^1.1.0",
     "styled-components": "5.2.3",
     "swiper": "6.5.7",
     "umi": "3.4.8"
