--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@ant-design/pro-layout": "6.16.3",
     "@umijs/preset-react": "1.x",
     "ahooks": "2.10.1",
-    "antd": "4.15.1",
+    "antd": "4.15.4",
     "dayjs": "^1.10.4",
     "framer-motion": "^4.1.10",
     "nprogress": "^0.2.0",
+    "react-player": "^2.9.0",
     "storejs": "^1.1.0",
     "styled-components": "5.2.3",
     "swiper": "6.5.7",
