--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@umijs/preset-react": "1.x",
     "ahooks": "2.10.1",
     "antd": "4.15.4",
+    "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "framer-motion": "^4.1.10",
     "nprogress": "^0.2.0",
