--- a/package.json
+++ b/package.json
@@ -29,12 +29,10 @@
     "dayjs": "^1.10.4",
     "framer-motion": "^4.1.10",
     "nprogress": "^0.2.0",
-    "react-hook-videojs": "^2.0.0",
     "storejs": "^1.1.0",
     "styled-components": "5.2.3",
     "swiper": "6.5.7",
-    "umi": "3.4.8",
-    "video.js": "^7.11.8"
+    "umi": "3.4.8"
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
